// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chooser Matches the snapshot 1`] = `
Array [
  .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid #D9DDE2;
  border-radius: 0.5rem;
  box-sizing: border-box;
  color: #57666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 3rem;
  padding: 1rem;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.c2:hover {
  background: #D9DDE2;
  border-color: #D9DDE2;
}

input[type="checkbox"]:checked + .c2,
input[type="radio"]:checked + .c2 {
  background: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
}

input[type="checkbox"]:focus + .c2,
input[type="radio"]:focus + .c2 {
  border-color: #0080A5;
}

input[type="checkbox"]:disabled + .c2,
input[type="radio"]:disabled + .c2 {
  background: #F1F2F2;
  border-color: #D9DDE2;
  color: #9CA7B4;
  cursor: auto;
}

.c2 b {
  font-size: 1.5rem;
  font-weight: 400;
}

.c2 svg {
  color: inherit;
  height: 3rem;
  width: 3rem;
}

.c1 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

.c0 {
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  box-sizing: border-box;
  display: grid;
  grid-gap: 1rem;
  grid-template-columns: repeat(auto-fit,minmax(8.75rem,1fr));
  width: auto;
}

<div
    className="c0"
  >
    <input
      checked={false}
      className="c1"
      name="maritalStatus"
      onChange={[Function]}
      type="radio"
      value="single"
    />
    <label
      className="c2"
    >
      Single, living alone or with a roommate
    </label>
    <input
      checked={true}
      className="c1"
      name="maritalStatus"
      onChange={[Function]}
      type="radio"
      value="married"
    />
    <label
      className="c2"
    >
      Married or living with a spouse
    </label>
  </div>,
  .c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid #D9DDE2;
  border-radius: 0.5rem;
  box-sizing: border-box;
  color: #57666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 3rem;
  padding: 1rem;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.c2:hover {
  background: #D9DDE2;
  border-color: #D9DDE2;
}

input[type="checkbox"]:checked + .c2,
input[type="radio"]:checked + .c2 {
  background: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
}

input[type="checkbox"]:focus + .c2,
input[type="radio"]:focus + .c2 {
  border-color: #0080A5;
}

input[type="checkbox"]:disabled + .c2,
input[type="radio"]:disabled + .c2 {
  background: #F1F2F2;
  border-color: #D9DDE2;
  color: #9CA7B4;
  cursor: auto;
}

.c2 b {
  font-size: 1.5rem;
  font-weight: 400;
}

.c2 svg {
  color: inherit;
  height: 3rem;
  width: 3rem;
}

.c1 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

.c0 {
  margin: 1rem 0 0;
}

<div
    className="c0"
  >
    <input
      checked={false}
      className="c1"
      name="maritalStatus"
      onChange={[Function]}
      type="radio"
      value="skip"
    />
    <label
      className="c2"
    >
      Would rather not say
    </label>
  </div>,
]
`;

exports[`Theme Wrapper Returns component with default theme 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.25rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.75rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: normal;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0.5rem 1rem;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #EF483E;
  border-color: #EF483E;
  color: #FFFFFF;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0 > svg {
  color: inherit;
}

.c0:hover {
  background-color: #D41F14;
  border-color: #D41F14;
}

.c0:disabled,
.c0:disabled:focus,
.c0:disabled:hover {
  background-color: #FF847C;
  border-color: #FF847C;
}

<button
  className="c0"
  onClick={[Function]}
>
  
</button>
`;

exports[`Theme Wrapper Returns component with test theme 1`] = `
.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.25rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 0.75rem;
  font-weight: 700;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: normal;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0.5rem 1rem;
  text-transform: uppercase;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #B3974B;
  border-color: #B3974B;
  color: #FFFFFF;
}

.c0:not(:disabled) {
  cursor: pointer;
}

.c0 > svg {
  color: inherit;
}

.c0:hover {
  background-color: #FFD86B;
  border-color: #FFD86B;
}

.c0:disabled,
.c0:disabled:focus,
.c0:disabled:hover {
  background-color: #736130;
  border-color: #736130;
}

<button
  className="c0"
  onClick={[Function]}
>
  
</button>
`;
